  26 Jun 2016; Manuel Friedli <manuel@fritteli.ch>
  -files/gitlab-ce-8.7.5-fix-redis-config-path.patch, -gitlab-ce-8.7.5.ebuild,
  -gitlab-ce-8.8.1.ebuild, -gitlab-ce-8.8.2.ebuild, -gitlab-ce-8.8.3.ebuild,
  -gitlab-ce-8.8.4.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Purged all old versions; updated patchfile for
  gitlab-ce-9999

*gitlab-ce-8.9.1 (26 Jun 2016)

  18 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.1.ebuild:
  Added ebuild for www-apps/gitlab-ce-8.9.1

*gitlab-ce-8.8.5 (18 Jun 2016)

  18 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.8.5.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  added ebuild for version 8.8.5 and updated dependencies
  for version 9999 (git master)

*gitlab-ce-8.8.4 (13 Jun 2016)

  13 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.8.4.ebuild:
  Added ebuild for www-apps/gitlab-ce-8.8.4

  07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
  Added ChangeLog